# cairn

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cairn/: __init__.py  __main__.py  cli.py
cairn/executors/: _cli.py  agy.py  base.py  claude.py  codex.py  cursor.py  grok.py  hermes.py  kimi.py  opencode.py  shell.py  stub.py
cairn/kernel/: agent_slots.py  artifacts.py  batchkit.py  compose.py  config.py  doctor.py  durafs.py  errors.py  expr.py  fssafety.py  gatekeys.py  gatekit.py  gckit.py  guards.py  hookprobe.py  learnkit.py  newkit.py  plan.py  proc.py  queue_drain.py  queue_ledger.py  resource_locks.py  runctl.py  runstate.py  sandbox.py  schedkit.py  schemas.py  sinks.py  sourcekit.py  statskit.py  template.py  testkit.py  toolcheck.py  trail.py  trigger_host.py  triggerkit.py  types.py  walk.py  work_item.py  wsid.py
cairn/resources/schemas/: run.schema.json  step-return.schema.json
docs/: API.md  ARCHITECTURE.md  CLAUDE-SANDBOX-PLAN.md  CONCEPTS.md  DISTRIBUTION.md  EXAMPLE-BREASE-REBUILD.md  FACTORY-PLAN.md  GETTING-STARTED.md  GUARD-WHEN-PLAN.md  HARDENING-PLAN.md  IMPLEMENTATION-PLAN.md  OBSERVABILITY.md  README.md  RELEASING.md  SCHEDULING.md  SECURITY.md  TESTING.md  TOOLING-AND-GROWTH.md  TRIGGERS-PLAN.md  TRIGGERS.md
site/: index.html  llms.txt  main.js  styles.css
site/assets/anim/: cairn-build-v3.webm  cairn-build.webm
templates/workspace/: .gitignore  README.md  allowlist.yaml  cairn.toml
templates/workspace/agents/: assistant.yaml  curator.yaml
templates/workspace/pipelines/: hello.yaml  self-improve.yaml
templates/workspace/prompts/: DOCTRINE.md
templates/workspace/schemas/: greeting.json  poll-report.json  self-improve-proposals.json  source-status.json  work-item.json
templates/workspace/scripts/: self-improve-open-pr.py
templates/workspace/skills/cairn-operator/: SKILL.md
templates/workspace/skills/self-improve-curator/: SKILL.md
templates/workspace/tests/: matrix.yaml
templates/workspace/tests/fixtures/proposals/: invalid-missing-rationale.json  invalid-target-escapes.json  valid-two-promotions.json
templates/workspace/tests/stubs/self-improve/curate/: proposals.json
templates/workspace/validators/: nonempty.py  poll-report-complete.py  self-improve-proposals.py  source-status.py
tests/live/workspace-claude/: cairn.toml
tests/live/workspace-claude/agents/: smoker.yaml
tests/live/workspace-claude/pipelines/: smoke.yaml  smokefail.yaml
tests/live/workspace-claude/schemas/: report.json
tests/live/workspace-claude/tests/: matrix.yaml
tests/live/workspace-claude/tests/fixtures/report/: valid-recorded.json
tests/live/workspace-claude/validators/: requires_token.py
tests/live/workspace-codex/: .gitignore  cairn.toml
tests/live/workspace-codex/agents/: smoker.yaml
tests/live/workspace-codex/pipelines/: smoke.yaml  smokefail.yaml
tests/live/workspace-codex/schemas/: report.json
tests/live/workspace-codex/tests/: matrix.yaml
tests/live/workspace-codex/tests/fixtures/report/: valid-recorded.json
tests/live/workspace-codex/validators/: requires_token.py
tests/live/workspace-fleet/: cairn.toml
tests/live/workspace-fleet/agents/: builder.yaml  reviewer.yaml  summarizer.yaml
tests/live/workspace-fleet/pipelines/: fleet.yaml
tests/live/workspace-fleet/prompts/: DOCTRINE.md
tests/live/workspace-fleet/schemas/: build.json  review.json  summary.json
tests/live/workspace-fleet/tests/: matrix.yaml
tests/live/workspace-fleet/tests/fixtures/review/: valid-recorded.json
tests/live/workspace-fleet/tests/fixtures/summary/: valid-recorded.json
tests/live/workspace-fleet/validators/: fleet_sentinel.py
tests/live/workspace-grok/: cairn.toml
tests/live/workspace-grok/agents/: smoker.yaml
tests/live/workspace-grok/pipelines/: smoke.yaml  smokefail.yaml
tests/live/workspace-grok/prompts/: DOCTRINE.md
tests/live/workspace-grok/schemas/: report.json
tests/live/workspace-grok/tests/: matrix.yaml
tests/live/workspace-grok/validators/: requires_token.py
tests/unit/: conftest.py  fstestkit.py  test_agent_slots.py  test_artifacts.py  test_batchkit.py  test_cli.py  test_compose.py  test_config.py  test_durafs.py  test_duration.py  test_errors.py  test_executor_base.py  test_executors_agy.py  test_executors_base.py  test_executors_claude.py  test_executors_codex.py  test_executors_cursor.py  test_executors_grok.py  test_executors_hermes.py  test_executors_kimi.py  test_executors_opencode.py  test_executors_shell.py  test_expr.py  test_factory_w3_close.py  test_gatekit.py  test_gckit.py  test_guards.py  test_hookprobe.py  test_inbox.py  test_lane_circuit.py  test_learnkit.py  test_panel_findings.py  test_plan.py  test_proc.py  test_queue_admission.py  test_queue_identity.py  test_queue_leases.py  test_queue_pin_gc.py  test_queue_races.py  test_queue_sweep.py  (+30 more)
tests/unit/fixtures/brease-ws/: allowlist.yaml  cairn.toml
tests/unit/fixtures/brease-ws/agents/: asset-generator.yaml  blueprint-architect.yaml  deployer.yaml  design-director.yaml  frontend-builder.yaml  modeler.yaml  populator.yaml  qa-validator.yaml  site-auditor.yaml  site-extractor.yaml  strategist.yaml
tests/unit/fixtures/brease-ws/pipelines/: brease-rebuild.yaml
tests/unit/fixtures/brease-ws/prompts/: DOCTRINE.md
tests/unit/fixtures/brease-ws/skills/brease-art-review/: SKILL.md
tests/unit/fixtures/brease-ws/skills/brease-asset-gen/: SKILL.md
tests/unit/fixtures/brease-ws/skills/brease-audit-and-decide/: SKILL.md
tests/unit/fixtures/brease-ws/skills/brease-blueprint-target/: SKILL.md
tests/unit/fixtures/brease-ws/skills/brease-build-frontend/: SKILL.md
tests/unit/fixtures/brease-ws/skills/brease-capture-site/: SKILL.md
tests/unit/fixtures/fakebin/: agent  agy  claude  codex  grok  hermes  kimi  opencode
tests/unit/fixtures/guard-checks/: allow_all.py  crash.py  deny_all.py  deny_if_secret.py  deny_if_secret_in_process_env.py  sleep.py
tests/unit/fixtures/validators/: crash.py  crash_stderr.py  echo_argv3.py  fail_empty.py  fail_reasons.py  pass.py  pass.sh  sleep.py
(+10 files in other folders)
