[project]
name = "cairn"
version = "0.1.0.dev0"
description = "Artifact-native pipeline orchestrator that delegates steps to coding-agent CLIs"
requires-python = ">=3.11"
dependencies = ["pyyaml", "jsonschema"]

[project.scripts]
cairn = "cairn.cli:main"

[project.entry-points."cairn.executors"]
shell = "cairn.executors.shell:ShellExecutor"
stub = "cairn.executors.stub:StubExecutor"
claude = "cairn.executors.claude:ClaudeExecutor"
codex = "cairn.executors.codex:CodexExecutor"
grok = "cairn.executors.grok:GrokExecutor"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cairn"]

# The scaffold tree lives at templates/workspace in the source repo (tests depend on it there);
# force-include it INTO the wheel under cairn/_templates so `cairn new workspace` works from an
# installed (`uv tool install`) copy. newkit.templates_dir() resolves this path first.
[tool.hatch.build.targets.wheel.force-include]
"templates/workspace" = "cairn/_templates/workspace"

[tool.pytest.ini_options]
testpaths = ["tests"]
