[project]
name = "cairn"
# Single-sourced: hatch reads __version__ from cairn/__init__.py (see [tool.hatch.version]).
dynamic = ["version"]
description = "Artifact-native pipeline orchestrator that delegates steps to coding-agent CLIs"
requires-python = ">=3.11"
dependencies = ["pyyaml", "jsonschema"]

[project.scripts]
cairn = "cairn.cli:main"

[project.entry-points."cairn.executors"]
shell = "cairn.executors.shell:ShellExecutor"
stub = "cairn.executors.stub:StubExecutor"
claude = "cairn.executors.claude:ClaudeExecutor"
codex = "cairn.executors.codex:CodexExecutor"
grok = "cairn.executors.grok:GrokExecutor"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cairn/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["cairn"]

# The scaffold tree lives at templates/workspace in the source repo (tests depend on it there);
# force-include it INTO the wheel under cairn/_templates so `cairn new workspace` works from an
# installed (`uv tool install`) copy. newkit.templates_dir() resolves this path first.
[tool.hatch.build.targets.wheel.force-include]
"templates/workspace" = "cairn/_templates/workspace"

[tool.pytest.ini_options]
testpaths = ["tests"]
